--- a/src/components/Context/Context.css
+++ b/src/components/Context/Context.css
@@ -1,5 +1,8 @@
 .Context {
 
     position: absolute;
+    /*background: url(http://www.powerpointhintergrund.com/uploads/dotted-grid-background-presentation-7.gif) top left;*/
+    min-width: 100vw;
+    min-height: 100vh;
 
 }
