--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -1,6 +1,8 @@
 .Glyph {
 
     position:absolute;
-    background: green;
+    background: white;
+    border-radius: 50%;
+    z-index: var(--z-glyph);
 
 }
