--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -5,4 +5,13 @@
     border-radius: 50%;
     z-index: var(--z-glyph);
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    /*background:rgba(0,0,0,0.2);*/
+    cursor: move;
+    text-align:center;
+
 }
