--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -16,7 +16,23 @@
 
 }
 
+.ConnectorFrom, .ConnectorTo {
+    display: none;
+    position: absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    align-items: center;
+    justify-content: center;
+}
 
-.Context.ConnectionMode1 .Glyph {
+.Context.ConnectionModeOn .ConnectorFrom {
     background: green;
+    display:flex;
+}
+
+.Context.FromGlyphChosen .ConnectorTo {
+    background: green;
+    display:flex;
 }
