--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -1,22 +1,35 @@
 .Glyph {
 
     position:absolute;
-    background: white;
-    border-radius: 50%;
     z-index: var(--z-glyph);
-
+    transform: translateY(-50%) translateX(-50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    /*background:rgba(0,0,0,0.2);*/
     cursor: move;
     text-align:center;
 
 }
 
-.ConnectorFrom, .ConnectorTo {
+.GlyphHorizontal {
+    flex-direction: row;
+}
+.GlyphHorizontal .GlyphImg {
+    margin-right: 0.5rem;
+}
+.GlyphHorizontal .GlyphContent {
+    text-align: left;
+}
+
+
+
+/*
+    Connectors
+    Are used to set from and to glyphs of the connection
+*/
+
+.GlyphConnector {
     display: none;
     position: absolute;
     top:0;
@@ -27,12 +40,12 @@
     justify-content: center;
 }
 
-.Context.ConnectionModeOn .ConnectorFrom {
+.Context.ConnectionModeOn .GlyphConnectorFrom {
     background: green;
     display:flex;
 }
 
-.Context.FromGlyphChosen .ConnectorTo {
-    background: green;
+.Context.FromGlyphChosen .GlyphConnectorTo {
+    background: greenyellow;
     display:flex;
 }
