--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+a{
+  display: inline-block;
+  color: inherit;
+  text-decoration: none;
+}
