--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -15,6 +15,15 @@
 .GlyphHorizontal {
     flex-direction: row;
 }
+.GlyphHorizontal--reverse {
+    flex-direction: row-reverse;
+}
+.GlyphHorizontal--column{
+    flex-direction: column;
+}
+.GlyphHorizontal--column-reverse{
+    flex-direction: column-reverse;
+}
 .GlyphHorizontal .GlyphImg {
     margin-right: 0.5rem;
 }
@@ -22,7 +31,13 @@
     text-align: left;
 }
 
-
+.Glyph__img{
+    width: 100px;
+    height: 100px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 5px;
+}
 
 /*
     Connectors
