#1 connections remove func added

--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -36,6 +36,7 @@
     height: 100px;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 5px;
 }
 
