--- a/src/components/GlyphMenu/GlyphMenu.css
+++ b/src/components/GlyphMenu/GlyphMenu.css
@@ -11,6 +11,14 @@
     z-index: 50;
 }
 
+.glyph-menu__list{
+    display: block;
+}
+
+.glyph-menu__list--hidden{
+    display: none;
+}
+
 .glyph-item{
     margin-bottom: 5px;
 }
