--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,10 @@ a{
   color: inherit;
   text-decoration: none;
 }
+
+.Navigation {
+  width:100%;
+  height:100%;
+  background:#f5f5f5;
+  position: relative;
+}
