--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,11 +1,32 @@
 .Menu {
     position:fixed;
-    top:0; left: 0;
-    width: 100%;
-    height: 50px;
+    top:0;
+    right: 0;
+    width: 250px;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     z-index: var(--z-menu);
-    background: #b7d8dd;
+    background: #fff; /*#b7d8dd;*/
     box-sizing: border-box;
-    padding:10px;
+    padding:20px;
+    font-size: 14px;
+}
+
+.Menu_block {
+    margin-bottom: 20px;
+}
+.Menu_block_header {
+    font-size: 18px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid rgba(0,0,0,0.1)
+}
+
+.Menu_block_row {
+    margin-bottom: 10px;
+}
+
+.Menu_contexts-list li {
+    margin-bottom: 5px;
 }
