--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -11,6 +11,7 @@
     box-sizing: border-box;
     padding:20px;
     font-size: 14px;
+    box-shadow: 0px 0 50px rgba(0,0,0,0.25);
 }
 
 .Menu_block {
