--- a/src/components/Glyph/Glyph.css
+++ b/src/components/Glyph/Glyph.css
@@ -1,4 +1,5 @@
 .Glyph {
+
     position:absolute;
     z-index: var(--z-glyph);
     transform: translateY(-50%) translateX(-50%);
@@ -9,7 +10,9 @@
     cursor: move;
     text-align:center;
     font-size:14px;
+
 }
+
 .GlyphHorizontal {
     flex-direction: row;
 }
@@ -28,11 +31,9 @@
 .GlyphHorizontal .GlyphContent {
     text-align: left;
 }
-.Glyph__img{
-    width: 100px;
-    height: 100px;
-    border-radius: 5px;
-}
+
+.GlyphImg {}
+
 .GlyphHeader {
     font-size: 18px;
     padding: 10px;
