--- a/src/components/Context/Context.css
+++ b/src/components/Context/Context.css
@@ -2,10 +2,22 @@
 
     position: absolute;
     /*background: url(http://www.powerpointhintergrund.com/uploads/dotted-grid-background-presentation-7.gif) top left;*/
-    min-width: 100vw;
-    min-height: 100vh;
+    /* min-width: 100%;
+    min-height: 100%; */
     z-index: var(--z-context);
+    left: 0;
+    top: 0;
+}
 
+.context__wrapper{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    cursor: grab;
+}
+
+.context__wrapper--grabbing{
+    cursor: grabbing;
 }
 
 /* Shows FROM glyph selector */
