--- a/src/components/Connection/Connection.css
+++ b/src/components/Connection/Connection.css
@@ -3,5 +3,6 @@
     /*border-top: 5px solid #8cc4cc;*/
     border-top: 3px solid rgba(48, 48, 102, 0.1);
     margin-top: -1.5px;
+    cursor: pointer;
     z-index: var(--z-connection);
 }
