--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -52,6 +52,10 @@
     margin-bottom: 10px;
 }
 
+.Menu_block_row.__collapsed {
+    display:none;
+}
+
 .Menu_contexts-list li {
     margin-bottom: 5px;
 }
